# Autonomous-Unmanned-System

./: .clangd  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: Clocks.c.4C68EBFEC4597BF8.idx  Clocks.h.CC177DCC44603EF1.idx  HIL_Clock_test.c.DBFDBD9A808F9407.idx  HIL_Clock_test.h.6EF21C795216E73D.idx  I2C.c.82F8D430AADD4A78.idx  I2C.h.35F2EF2A0F6B4AD1.idx  SPI.c.F192695C210C14F5.idx  SPI.h.A638E178AE1CA82A.idx  _ansi.h.8DD8FCE4E5144BF2.idx  _default_types.h.C58C807965B86BCC.idx  _newlib_version.h.C60C701D886A3741.idx  _pthreadtypes.h.A9AA2A371D83FF39.idx  _stdint.h.C64C82C2AC5DC4E5.idx  _types.h.1A4052404A5A7840.idx  _types.h.DE9025499813749C.idx  cachel1_armv7.h.5714199BAD57FC5F.idx  cdefs.h.D2B83D3ED02457FF.idx  cmsis_compiler.h.4E4CD7EA21EE3DDF.idx  cmsis_gcc.h.7DD58D0B2F4C6F10.idx  cmsis_version.h.13F8D8DF9D924601.idx  config.h.6757B36402BE1029.idx  core_cm7.h.DC519BAFAFACEF6A.idx  features.h.FDD516EA7170D8AA.idx  ieeefp.h.EFA47950E5D827E6.idx  lock.h.128EBD793E817E21.idx  main.c.5ADDA23AF09A4F73.idx  math.h.FEFA9A2B293B122B.idx  mpu_armv7.h.F7C91ED5815D0C98.idx  newlib.h.9AB2D583C7D549CD.idx  reent.h.2546818AC2331F33.idx  scheduler.c.102CF154B7BF0F6E.idx  scheduler.h.6364F6236E32227E.idx  stdarg.h.4A4A08856F2F2B2E.idx  stdbool.h.8A0011D7D5F59CAC.idx  stddef.h.3A6B95B3DAD55E88.idx  stdint.h.8BD95BD0A7A164CD.idx  stdio.h.32F8C17B0804C193.idx  stdio.h.75765CF5B6B6FD87.idx  stm32h723xx.h.149DBF6BBC41EA82.idx  stm32h723xx.h.323426A4B0A99CFA.idx  (+6 more)
Drivers_2/: Clocks.c  I2C.c  SPI.c
Flight Controller Hardware/: FlightController.kicad_prl  FlightController.kicad_pro  FlightController.kicad_sch  sensors.kicad_sch  sensors_2.kicad_sch
HIL_UNIT_TEST/: HIL_Clock_test.c
Linker/: stm32h723xx_flash.ld
headers/: Clocks.h  HIL_Clock_test.h  I2C.h  SPI.h  scheduler.h
scheduler/: scheduler.c
src/: main.c
